# python-ci-template

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-template.md  docs-template.md  epics-template.md  feature-template.md  task-template.md  user-story-template.md
.github/workflows/: ci.yml  release-please.yml
archive/: ci.allfiles.yml  prek.unused.ntoml
docs/: tooling.md
docs/common_workflows/: building_managing_project.md  ci_lifecycle.md  commit_authoring_commitizen.md  makefile_shortcuts.md  new_prek_hooks.md  prek_quality_checks.md  project_setup.md  pyright_typechecking.md  pytest_unit_testing.md  release_please.md  ruff_linting_formatting.md  scalene_profiling.md  uv_package_manager.md
docs/concepts/: boy_scout_rule.md  conventional_commits.md  semantic_versioning.md
scripts/interactive/: prek-setup.interactive.sh
scripts/non-interactive/: install-commitizen-hooks.sh  install-deps.sh  is-git-project-root.sh  setup-prek.sh
src/amlight_programmable_data_plane/: __init__.py  main.py  parser.py
src/foo/: __init__.py  main.py
tests/: conftest.py
tests/unit/: test_main.py  test_parser.py
tests/unit/__snapshots__/: test_parser.ambr
